--- a/qt-5.15/PKGBUILD
+++ b/qt-5.15/PKGBUILD
@@ -129,7 +129,7 @@ apply_patch_with_msg() {
 
 prepare() {
   [[ -d ${srcdir}/${_pkgfqn} ]] && rm -rf ${srcdir}/${_pkgfqn}
-  tar -xJf ${srcdir}/${_pkgfqn}${_hotfix}.tar.xz -C ${srcdir} --exclude=${_pkgfqn}/{qtandroidextras,qtmacextras,qtwayland,qtwebengine,qtx11extras} || true
+  xz -d --stdout ${srcdir}/${_pkgfqn}${_hotfix}.tar.xz | tar -x --file=- -C ${srcdir} --exclude=${_pkgfqn}/{qtandroidextras,qtmacextras,qtwayland,qtwebengine,qtx11extras} || true
 
   cd ${srcdir}/${_pkgfqn}
 
