--- a/qt-5.12/PKGBUILD
+++ b/qt-5.12/PKGBUILD
@@ -320,6 +320,7 @@ build() {
   configure_opts+=("-skip" "qtquickcontrols")
   configure_opts+=("-skip" "qtquickcontrols2")
   configure_opts+=("-skip" "qtscript")
+  configure_opts+=("-skip" "qtmultimedia")
 
   configure_opts+=("-qt-freetype")
   configure_opts+=("-qt-harfbuzz")
