update to qt 5.12.10

--- a/qt-5.12/PKGBUILD
+++ b/qt-5.12/PKGBUILD
@@ -24,7 +24,7 @@ _make=make
 _realname=qt5${_namesuff}
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-_ver_base=5.12.9
+_ver_base=5.12.10
 _hotfix=
 pkgver=${_ver_base//-/}
 pkgrel=1
@@ -300,6 +300,7 @@ build() {
   configure_opts+=("-skip" "qtcanvas3d")
   configure_opts+=("-skip" "qtcharts")
   configure_opts+=("-skip" "qtdatavis3d")
+  configure_opts+=("-skip" "qtdeclarative")
   configure_opts+=("-skip" "qtdoc")
   configure_opts+=("-skip" "qtnetworkauth")
   configure_opts+=("-skip" "qtpurchasing")
@@ -310,11 +311,16 @@ build() {
   configure_opts+=("-skip" "qttranslations")
   configure_opts+=("-skip" "qtvirtualkeyboard")
   configure_opts+=("-skip" "qtwebengine")
+  configure_opts+=("-skip" "qtwebsockets")
+  configure_opts+=("-skip" "qtwebchannel")
+  configure_opts+=("-skip" "qtwebview")
   configure_opts+=("-skip" "qtsensors")
   configure_opts+=("-skip" "qtserialbus")
   configure_opts+=("-skip" "qtlocation")
+  configure_opts+=("-skip" "qttools")
   configure_opts+=("-skip" "qtconnectivity")
-  configure_opts+=("-skip" "gamepad")
+  configure_opts+=("-skip" "qtgamepad")
+  configure_opts+=("-skip" "qtgraphicaleffects")
   configure_opts+=("-skip" "qt3d")
   configure_opts+=("-skip" "qtxmlpatterns")
   configure_opts+=("-skip" "qtquickcontrols")
@@ -408,7 +414,7 @@ package() {
       -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${PKGDIR_QT_PREFIX_WIN}/..|g" {} \;
 }
 
-sha256sums=('a628186814b73e93594ee8e72f975116599f946919ae6bd86611981b739acff0'
+sha256sums=('3e0ee1e57f5cf3eeb038d0b4b22c7eb442285c62639290756b39dc93a1d0e14f'
             'fabc14c5e854a17f1fdfb6575e0950b1f6e8b0f4ee36cca0c017994b4070ecac'
             '617e6fa85a92353d0073425d37cd5d90d92cb7f906d66dd2d0df576122d091a4'
             '27ce2161b5dbea2fcce6b15948ab722a71036d056420854f6554969f683583bb'
