--- a/qt-5.15/PKGBUILD
+++ b/qt-5.15/PKGBUILD
@@ -7,7 +7,12 @@ _system_freetype=no
 _system_zlib=no
 _system_pcre=no
 _system_libpng=no
+_system_libjpeg=no
 _system_harfbuzz=no
+_system_assimp=no
+_system_doubleconversion=no
+_system_libtiff=no
+_system_libwebp=no
 _build_examples=no
 _build_tools=no
 _build_tests=no
@@ -21,7 +26,7 @@ _make=make
 _realname=qt5${_namesuff}
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-_ver_base=5.15.0
+_ver_base=5.15.2
 _hotfix=
 pkgver=${_ver_base//-/}
 pkgrel=1
@@ -96,6 +101,8 @@ source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/${_ver_base}${_
         0300-qt-5.8.0-cast-errors.patch
         0302-ugly-hack-disable-qdoc-build.patch
         0400-fxc_fix.patch
+        0304-qtdeclarative-disable-dx12.patch
+        0310-fix-assimp-not-found.patch
         0401-angle-fix.patch)
 
 # Translates using cygpath according to the ${_make} being used
@@ -178,6 +185,8 @@ prepare() {
     0125-qt5-windeployqt-fixes.patch \
     0300-qt-5.8.0-cast-errors.patch \
     0400-fxc_fix.patch \
+    0304-qtdeclarative-disable-dx12.patch \
+    0310-fix-assimp-not-found.patch \
     0401-angle-fix.patch
 
   local _ARCH_TUNE="-march=nocona -mtune=core2"
@@ -277,7 +286,10 @@ build() {
   configure_opts+=("-skip" "qtcharts")
   configure_opts+=("-skip" "qtdatavis3d")
   configure_opts+=("-skip" "qtdoc")
+  configure_opts+=("-skip" "qtdeclarative")
   configure_opts+=("-skip" "qtnetworkauth")
+  configure_opts+=("-skip" "qtquickcontrols")
+  configure_opts+=("-skip" "qtquickcontrols2")
   configure_opts+=("-skip" "qtpurchasing")
   configure_opts+=("-skip" "qtremoteobjects")
   configure_opts+=("-skip" "qtscxml")
@@ -301,6 +313,7 @@ build() {
   configure_opts+=("-qt-freetype")
   configure_opts+=("-qt-harfbuzz")
   configure_opts+=("-qt-libpng")
+  configure_opts+=("-qt-libjpeg")
   configure_opts+=("-qt-zlib")
   configure_opts+=("-qt-pcre")
   configure_opts+=("-no-icu")
@@ -400,7 +413,7 @@ package() {
       -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${MINGW_PREFIX}|g" {} \;
 }
 
-sha256sums=('22b63d7a7a45183865cc4141124f12b673e7a17b1fe2b91e433f6547c5d548c3'
+sha256sums=('3a530d1b243b5dec00bc54937455471aaa3e56849d2593edb8ded07228202240'
             '884b32f0e2e1bb110330a921b69443379a7be98c42f13754f9c5f56c040ba3b7'
             '617e6fa85a92353d0073425d37cd5d90d92cb7f906d66dd2d0df576122d091a4'
             '27ce2161b5dbea2fcce6b15948ab722a71036d056420854f6554969f683583bb'
@@ -413,7 +426,7 @@ sha256sums=('22b63d7a7a45183865cc4141124f12b673e7a17b1fe2b91e433f6547c5d548c3'
             'd8a476be7e55e8bb9362868073dc9e7937431e68b9578c0a0ed103cf1ebc8c01'
             'd7c228df3cc680793a6c858e1fac01092c0877071c075804b7e93f6b3a481eae'
             '97fcd6bd58ff8b8d735a6381b607bb3b4b351d1d07be1bbc18b97155dcbb501d'
-            '5c437c611d2d19b834b2ba3301e270bf16e6bc6e6fe6470f8066a443ffcad152'
+            'f80ce415f25f0aa4ead2efe369b41efe35d9848d4d36d8dbf3831e48dbd6e506'
             '19566c38bd50581acaa6a9f46f0e25c41fdfc8b0b42269126e4d3a9b83e2f224'
             'ddaa067d144f5788ab7a3ed0dfc426d702c13de9c35f04eaaf38d642be4934d4'
             '8beeb610df3aff14bae43c56e5781cda3d49f1ad23c6e3fc2aa2405ce002de46'
@@ -422,7 +435,7 @@ sha256sums=('22b63d7a7a45183865cc4141124f12b673e7a17b1fe2b91e433f6547c5d548c3'
             '42724bd154ed98c612d19a7daee2b5028270ef6dbfe7f35d5f97c8d0605f9fe6'
             '3dc4d7c4fed8fedd726211edbfe13f4d78247d3ab2f789f3ce2a8e43e59a7c5b'
             'c84cb5ba4243413232bc693fb0f54c0283bf0e496e6790a2698f226f80275a61'
-            '9371bd118340ac37a4a1c0ef00a61aa11a499e9e34f1fa3c1e65d001322ad174'
+            '69e1d6f8fc59ee2da0abe0a6965d0d7730bd015c5b1f1c5b4a69435328b21768'
             '00e32052ac1a9a8391275dfe69901d4ae146ac1441c00bf46f3ef1cfe459a78d'
             '8a74fab12c9d3faac81d75ea1c0662624b83059631db8d9f2570b414d62dc692'
             'b878680172290ad2dcb5508827ef5a9230cbfd8e97d2672d2e96b5addbd55833'
@@ -433,4 +446,6 @@ sha256sums=('22b63d7a7a45183865cc4141124f12b673e7a17b1fe2b91e433f6547c5d548c3'
             '9ea7aeb486023f3aebf1af44603ebd9266009aaeaf91e52c37c8c5154ea3900c'
             '7e57ce20b6707bc3b4a727da3287cadda13a74317d86515358b2535bc15244c7'
             '24ef832cac04257b65557ce19fbdfdc72f6b693c9681012d3ec9f9c28a0ad972'
+            '052c7035ad9a4fc0321975ba7658fb755bbc0841c7e1d9e88bb0a15e6a90b770'
+            '157b97b3e3031d93d93e45368a1c54ebfbf9578116f75f5126e977e5dd518191'
             '2da436e472c1201ff5f06a26caa17522e341e3c59f43437940da488225e40d17')
