--- a/qt-5.15/PKGBUILD
+++ b/qt-5.15/PKGBUILD
@@ -39,7 +39,7 @@ fi
 _realname=qt5${_namesuff}
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-_ver_base=5.15.4
+_ver_base=5.15.5
 _hotfix=
 pkgver=${_ver_base//-/}
 pkgrel=1
@@ -120,10 +120,8 @@ source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/${_ver_base}${_
         0302-ugly-hack-disable-qdoc-build.patch
         0304-qtdeclarative-disable-dx12.patch
         0310-fix-assimp-not-found.patch
-        https://invent.kde.org/qt/qt/qtbase/commit/cd1646f00ae9df9824a639d01a2be708f85235fe.patch
-        https://invent.kde.org/qt/qt/qtbase/commit/8bcf1828f4d75606fb8d6913dfe09e2363a06cac.patch
-        https://invent.kde.org/qt/qt/qtdeclarative/commit/3c42d4d3dce95b67d65541c5612384eab0c3e27b.patch
-        https://invent.kde.org/qt/qt/qtdeclarative/commit/0eb5ff2e97713e12318c00bab9f3605abb8592c2.patch)
+        8bcf1828f4d75606fb8d6913dfe09e2363a06cac.patch
+        3c42d4d3dce95b67d65541c5612384eab0c3e27b.patch)
 
 # Translates using cygpath according to the ${_make} being used
 # (so either mingw32-make or MSYS2 make can be used)
@@ -212,13 +210,11 @@ prepare() {
     0310-fix-assimp-not-found.patch
 
   cd qtbase
-  apply_patch_with_msg cd1646f00ae9df9824a639d01a2be708f85235fe.patch
   apply_patch_with_msg 8bcf1828f4d75606fb8d6913dfe09e2363a06cac.patch
   cd -
 
   cd qtdeclarative
   apply_patch_with_msg 3c42d4d3dce95b67d65541c5612384eab0c3e27b.patch
-  apply_patch_with_msg 0eb5ff2e97713e12318c00bab9f3605abb8592c2.patch
   cd -
 
 
@@ -449,7 +445,7 @@ package() {
       -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${MINGW_PREFIX}|g" {} \;
 }
 
-sha256sums=('615ff68d7af8eef3167de1fd15eac1b150e1fd69d1e2f4239e54447e7797253b'
+sha256sums=('5a97827bdf9fd515f43bc7651defaf64fecb7a55e051c79b8f80510d0e990f06'
             '884b32f0e2e1bb110330a921b69443379a7be98c42f13754f9c5f56c040ba3b7'
             '617e6fa85a92353d0073425d37cd5d90d92cb7f906d66dd2d0df576122d091a4'
             '27ce2161b5dbea2fcce6b15948ab722a71036d056420854f6554969f683583bb'
@@ -485,7 +481,5 @@ sha256sums=('615ff68d7af8eef3167de1fd15eac1b150e1fd69d1e2f4239e54447e7797253b'
             '7e57ce20b6707bc3b4a727da3287cadda13a74317d86515358b2535bc15244c7'
             '052c7035ad9a4fc0321975ba7658fb755bbc0841c7e1d9e88bb0a15e6a90b770'
             '157b97b3e3031d93d93e45368a1c54ebfbf9578116f75f5126e977e5dd518191'
-            'c441973c3af66e6d58cce39d39b6e18d5832d942371ffd8c149ef732210c8e2c'
-            'f216814efff6c834fcdc0dae4c54bec0b4ef41132f78c6d0a4c6bf7f6feafda2'
-            'e8943934af0cea22814b526ca75abf98cacac2d0f86e2b2c9588c694a859f9d2'
-            '496241b7810f8073c82b781c7c4addb38a4ec3fbe3e7cafff56b0d0e340e2d5f')
+            '42db6bf224c9af94608c750e4f3e9aa147131681731f293eb34bf36abb2b8ab2'
+            'e8943934af0cea22814b526ca75abf98cacac2d0f86e2b2c9588c694a859f9d2')
