--- a/qt-5.15/PKGBUILD
+++ b/qt-5.15/PKGBUILD
@@ -4,31 +4,6 @@
 # Maintainer: Alexey Pavlov <alexpux@gmail.com>
 # Maintainer: Ray Donnelly <mingw.android@gmail.com>
 
-_namesuff="-mem"
-_with_icu=no
-_with_fontconfig=no
-_with_openssl=yes
-_with_dbus=no
-_system_freetype=no
-_system_zlib=no
-_system_pcre=no
-_system_libpng=no
-_system_libjpeg=no
-_system_harfbuzz=no
-_system_assimp=no
-_system_doubleconversion=no
-_system_libtiff=no
-_system_libwebp=no
-_build_examples=no
-_build_tools=no
-_build_tests=no
-_make_docs=no
-
-_debuggable_release=yes
-
-_configure=./configure
-_make=make
-
 # Use the right mkspecs file
 if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
   _platform=win32-clang-g++
@@ -36,39 +11,23 @@ else
   _platform=win32-g++
 fi
 
-_realname=qt5${_namesuff}
+_realname=qt5-static-mem
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-_ver_base=5.15.6
-_hotfix=
-pkgver=${_ver_base//-/}
+pkgver=5.15.8
 pkgrel=1
 arch=('any')
 mingw_arch=('mingw64' 'clang64')
-pkgdesc="A cross-platform application and UI framework (mingw-w64${_namesuff})"
+pkgdesc="A cross-platform application and UI framework (mingw-w64-static-mem)"
 url='https://www.qt.io/'
 install=qt5-${MSYSTEM}.install
 license=('GPL3' 'LGPL' 'FDL' 'custom')
-
-_qt5_prefix="${MINGW_PREFIX}/${_realname}"
-
-depends=("${MINGW_PACKAGE_PREFIX}-gcc-libs"
+depends=("${MINGW_PACKAGE_PREFIX}-cc"
+         "${MINGW_PACKAGE_PREFIX}-gdb"
          "${MINGW_PACKAGE_PREFIX}-qtbinpatcher"
          "${MINGW_PACKAGE_PREFIX}-z3"
-        )
-
-makedepends=("bison"
-             "diffutils"
-             "flex"
-             "gperf"
-             "m4"
-             "make"
-             "patch"
-             "perl"
-             "dos2unix"
-             "rsync"
-             "unzip"
-             "${MINGW_PACKAGE_PREFIX}-cc"
+         "make")
+makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "${MINGW_PACKAGE_PREFIX}-clang"
              "${MINGW_PACKAGE_PREFIX}-clang-tools-extra"
              "${MINGW_PACKAGE_PREFIX}-fxc2"
@@ -76,15 +35,21 @@ makedepends=("bison"
              "${MINGW_PACKAGE_PREFIX}-python"
              "${MINGW_PACKAGE_PREFIX}-make"
              "${MINGW_PACKAGE_PREFIX}-ninja"
+             "${MINGW_PACKAGE_PREFIX}-dbus"
              "${MINGW_PACKAGE_PREFIX}-openssl"
-            )
-
-groups=("${MINGW_PACKAGE_PREFIX}-qt${_namesuff}" "${MINGW_PACKAGE_PREFIX}-qt5${_namesuff}")
+             "bison"
+             "flex"
+             "m4"
+             "patch"
+             "make"
+             "dos2unix"
+             "perl")
+groups=("${MINGW_PACKAGE_PREFIX}-qt-static" "${MINGW_PACKAGE_PREFIX}-qt5-static")
 options=('!strip' 'staticlibs' 'ccache')
-_pkgfile="qt-everywhere-opensource-src-${_ver_base}${_hotfix}"
-_pkgfqn="qt-everywhere-src-${_ver_base}"
+_pkgfile="qt-everywhere-opensource-src-${pkgver}"
+_pkgfqn="qt-everywhere-src-${pkgver}"
 noextract=(${_pkgfile}.tar.xz)
-source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/${_ver_base}${_hotfix}/single/${_pkgfile}.tar.xz
+source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/${pkgver}/single/${_pkgfile}.tar.xz
         0000-adjust-qmake-conf-mingw.patch
         0001-qt-5.8.0-fix-sql-libraries-mingw.patch
         0002-qt-5.8.0-configure-gcc-before-clang.patch
@@ -119,29 +84,7 @@ source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/${_ver_base}${_
         0300-qt-5.8.0-cast-errors.patch
         0302-ugly-hack-disable-qdoc-build.patch
         0304-qtdeclarative-disable-dx12.patch
-        0310-fix-assimp-not-found.patch
-        8bcf1828f4d75606fb8d6913dfe09e2363a06cac.patch
-        3c42d4d3dce95b67d65541c5612384eab0c3e27b.patch)
-
-# Translates using cygpath according to the ${_make} being used
-# (so either mingw32-make or MSYS2 make can be used)
-path_conv_for_make() {
-    MINGW_PREFIX_W=$(cygpath -m ${MINGW_PREFIX})
-    echo -n "${1}" | sed "s|${MINGW_PREFIX_W}|$(cygpath -u ${MINGW_PREFIX})|g"
-}
-
-# Runs pkg-config with all arguments, then calls path_conv_for_make on each
-# result and then adds delimiter between -I/-L/-l and path - both configure
-# and configure.bat prefer this. Results returned as an array.
-pkg_config_qt5() {
-  local _res=$(${MINGW_PREFIX}/bin/pkg-config $*)
-  local -a _final=()
-  for _part in $(path_conv_for_make "${_res}"); do
-      _final+=($(echo -n "${_part}" | sed "s|-\([ILl]\)\(.*\)|-\1|g"))
-      _final+=($(echo -n "${_part}" | sed "s|-\([ILl]\)\(.*\)|\2|g"))
-  done
-  echo "${_final[@]}"
-}
+        0310-fix-assimp-not-found.patch)
 
 # Helper macros to help make tasks easier #
 apply_patch_with_msg() {
@@ -173,10 +116,8 @@ prepare() {
     0008-qt-5.3.0-win32-g-Add-QMAKE_EXTENSION_IMPORTLIB-defaulting-to-.patch \
     0011-qt-5.8.0-mingw-dbus-and-pkg-config.patch \
     0016-qt-5.8.0-win32-g++-use-qpa-genericunixfontdatabase.patch \
-    0017-qt-5.3.0-fix-examples-building.patch
-
-    apply_patch_with_msg \
-      0025-qt-5.8.0-force-using-make-on-msys.patch
+    0017-qt-5.3.0-fix-examples-building.patch \
+    0025-qt-5.8.0-force-using-make-on-msys.patch
 
   # Ossi says we should fix this in qwebkit with a $$(shell_path), but the ' quotes get in the way
   # due to qtPrepareTool adding them with $$shell_quote
@@ -189,7 +130,6 @@ prepare() {
   # Patches so that qt5-static can be used with cmake.
   apply_patch_with_msg \
     0036-qt-5.3.2-win32-qt5-static-cmake-link-ws2_32-and--static.patch
-
 
   apply_patch_with_msg \
     0048-qt-5.4.2-win32-Avoid-platformNativeInterface-segfaults-with-minimal-platform.patch \
@@ -209,29 +149,13 @@ prepare() {
     0304-qtdeclarative-disable-dx12.patch \
     0310-fix-assimp-not-found.patch
 
-  cd qtbase
-  apply_patch_with_msg 8bcf1828f4d75606fb8d6913dfe09e2363a06cac.patch
-  cd -
-
-  cd qtdeclarative
-  apply_patch_with_msg 3c42d4d3dce95b67d65541c5612384eab0c3e27b.patch
-  cd -
-
-
   local _ARCH_TUNE=
-  local _HARD_FLAGS=
   case ${MINGW_CHOST} in
     i686*)
-      _ARCH_TUNE="-march=i686 -mtune=core2"
-      if [ "${_enable_hardening}" = "yes" ]; then
-        _HARD_FLAGS="-Wl,--dynamicbase,--nxcompat,--no-seh"
-      fi
+      _ARCH_TUNE="-march=pentium4 -mtune=generic"
     ;;
     x86_64*)
-      _ARCH_TUNE="-march=nocona -mtune=core2"
-      if [ "${_enable_hardening}" = "yes" ]; then
-        _HARD_FLAGS="-Wl,--dynamicbase,--high-entropy-va,--nxcompat,--default-image-base-high"
-      fi
+      _ARCH_TUNE="-march=nocona -msahf -mtune=generic"
     ;;
   esac
 
@@ -239,32 +163,40 @@ prepare() {
 
   # Append these ones ..
   sed -i "s|^QMAKE_CFLAGS .*= \(.*\)$|QMAKE_CFLAGS            = \1 ${_ARCH_TUNE} ${BIGOBJ_FLAGS} ${LTCG_CFLAGS}|g" qtbase/mkspecs/${_platform}/qmake.conf
-  sed -i "s|^QMAKE_LFLAGS           +=\(.*\)$|QMAKE_LFLAGS            += \1 ${LTCG_LFLAGS} ${_HARD_FLAGS}|g" qtbase/mkspecs/common/gcc-base.conf
+  sed -i "s|^QMAKE_LFLAGS           +=\(.*\)$|QMAKE_LFLAGS            += \1 ${LTCG_LFLAGS}|g" qtbase/mkspecs/common/gcc-base.conf
   # But overwrite this one.
   #sed -i "s|^QMAKE_LFLAGS_RELEASE .*= \(.*\)$|QMAKE_LFLAGS_RELEASE    = ${QMAKE_LFLAGS_RELEASE}|g" qtbase/mkspecs/common/g++-win32.conf
 
   # To keep the build folder name quite small (PATH_MAX limit)
-  # the source folder (long) is renamed to $CARCH (i686 or x86_64)
+  # the source folder (long) is renamed to $MSYSTEM (MINGW32 or MINGW64)
   cd ${srcdir}
-  [[ -d ${CARCH} ]] && rm -rf ${CARCH}
+  [[ -d ${MSYSTEM} ]] && rm -rf ${MSYSTEM}
   sleep 5
-  mv ${_pkgfqn} ${CARCH}
+  mv ${_pkgfqn} ${MSYSTEM}
 }
 
 build() {
-  local _buildpkgdir=${pkgdirbase}/${pkgname}/${_qt5_prefix}
+  local _buildpkgdir=${pkgdirbase}/${pkgname}/${MINGW_PREFIX}/${_realname}
   mkdir -p ${_buildpkgdir}
   local QTDIR_WIN=$(cygpath -am ${_buildpkgdir})
 
+  local _freetype2_pkgconf=""
+  local _libxml2_pkgconf=""
+
+  _extra_incpaths+=("-I")
+  _extra_incpaths+=("${MINGW_PREFIX}/include/mariadb")
 
   local -a _extra_libpaths=()
   local -a _extra_libs=()
 
-
-  cd ${CARCH}
+  cd ${MSYSTEM}
   touch qtbase/.gitignore
 
-  # Determine the SQL driver configuration, variant dependent.
+  # Set other config stuff that's configure-script-type dependent.
+  local -a _extra_config
+
+  _extra_config+=("-no-glib")
+
   # static can't use anything but -qt-sql-sqlite both for size
   # reasons and because shared libraries get auto-detected and
   # built as plugins.
@@ -292,7 +224,7 @@ build() {
 
   local -a configure_opts
 
-  export PATH="${srcdir}/${CARCH}/qtbase/bin:${srcdir}/${CARCH}/qtbase/lib:${PATH}"
+  export PATH="${srcdir}/${MSYSTEM}/qtbase/bin:${srcdir}/${MSYSTEM}/qtbase/lib:${PATH}"
   export LLVM_INSTALL_DIR=${MINGW_PREFIX}
   #export VULKAN_SDK=${MINGW_PREFIX}
   export QDOC_USE_STATIC_LIBCLANG=1
@@ -301,6 +233,7 @@ build() {
   export QDOC_SKIP_BUILD=1
 
   configure_opts+=("-static")
+  configure_opts+=("-static-runtime")
   configure_opts+=("-no-jasper")
   configure_opts+=("-no-mng")
   configure_opts+=("-D" "JAS_DLL=0")
@@ -308,9 +241,9 @@ build() {
   configure_opts+=("-openssl-linked")
   configure_opts+=("-no-fontconfig")
   configure_opts+=("-no-iconv")
-  configure_opts+=("-no-glib")
   configure_opts+=("-no-gif")
-  configure_opts+=("-no-libjpeg")
+  configure_opts+=("-no-tiff")
+  configure_opts+=("-no-webp")
   configure_opts+=("-no-gbm")
   configure_opts+=("-no-glib")
   configure_opts+=("-skip" "qtactiveqt")
@@ -344,8 +277,8 @@ build() {
 
   configure_opts+=("-qt-freetype")
   configure_opts+=("-qt-harfbuzz")
-  configure_opts+=("-qt-libpng")
   configure_opts+=("-qt-libjpeg")
+  configure_opts+=("-qt-libpng")
   configure_opts+=("-qt-zlib")
   configure_opts+=("-qt-pcre")
   configure_opts+=("-no-icu")
@@ -353,12 +286,10 @@ build() {
   configure_opts+=("-nomake" "tests")
   configure_opts+=("-skip" "qttools")
 
-  ${_configure} \
+  ./configure \
     -prefix ${QTDIR_WIN} \
     -datadir ${QTDIR_WIN}/share/qt5 \
     -archdatadir ${QTDIR_WIN}/share/qt5 \
-    -examplesdir ${QTDIR_WIN}/share/qt5/examples \
-    -testsdir ${QTDIR_WIN}/share/qt5/tests \
     -no-opengl \
     -opensource \
     -confirm-license \
@@ -373,86 +304,80 @@ build() {
     "${_sql_config[@]}" \
     "${configure_opts[@]}"
 
-  ${_make} ${MAKEFLAGS} || ${_make} ${MAKEFLAGS}
+  make || make
 }
 
 check() {
-  cd ${CARCH}
+  cd ${MSYSTEM}
   make check -j1 -k
 }
 
 package() {
+  cd ${MSYSTEM}
 
-  cd ${CARCH}
+  make install
 
-  export PATH=${pkgdir}${_qt5_prefix}/bin:${srcdir}/${CARCH}/qtbase/bin:${srcdir}/${CARCH}/qtbase/lib:${PATH}
-
-  ${_make} install
-
-  install -D -m644 LICENSE.FDL     "${pkgdir}${_qt5_prefix}"/share/licenses/qt5/LICENSE.FDL
-  install -D -m644 LICENSE.GPLv2   "${pkgdir}${_qt5_prefix}"/share/licenses/qt5/LICENSE.GPLv2
-  install -D -m644 LICENSE.GPLv3   "${pkgdir}${_qt5_prefix}"/share/licenses/qt5/LICENSE.GPLv3
-  install -D -m644 LICENSE.LGPLv21  "${pkgdir}${_qt5_prefix}"/share/licenses/qt5/LICENSE.LGPLv21
-  install -D -m644 LICENSE.LGPLv3  "${pkgdir}${_qt5_prefix}"/share/licenses/qt5/LICENSE.LGPLv3
-  install -D -m644 LICENSE.QT-LICENSE-AGREEMENT  "${pkgdir}${_qt5_prefix}"/share/licenses/qt5/LICENSE.QT-LICENSE-AGREEMENT
-
-  mv -f "${pkgdir}${_qt5_prefix}/lib"/*.debug "${pkgdir}${_qt5_prefix}/bin"/ || true
-  rsync -armR --remove-source-files --include="*/" --include="*.debug" --exclude="*" --prune-empty-dirs ${pkgdir}/.${MINGW_PREFIX} ${srcdir}/${CARCH}-debug/
+  install -D -m644 LICENSE.FDL     "${pkgdir}${MINGW_PREFIX}/${_realname}"/share/licenses/qt5/LICENSE.FDL
+  install -D -m644 LICENSE.GPLv2   "${pkgdir}${MINGW_PREFIX}/${_realname}"/share/licenses/qt5/LICENSE.GPLv2
+  install -D -m644 LICENSE.GPLv3   "${pkgdir}${MINGW_PREFIX}/${_realname}"/share/licenses/qt5/LICENSE.GPLv3
+  install -D -m644 LICENSE.LGPLv21  "${pkgdir}${MINGW_PREFIX}/${_realname}"/share/licenses/qt5/LICENSE.LGPLv21
+  install -D -m644 LICENSE.LGPLv3  "${pkgdir}${MINGW_PREFIX}/${_realname}"/share/licenses/qt5/LICENSE.LGPLv3
+  install -D -m644 LICENSE.QT-LICENSE-AGREEMENT  "${pkgdir}${MINGW_PREFIX}/${_realname}"/share/licenses/qt5/LICENSE.QT-LICENSE-AGREEMENT
 
   # Remove dlls from lib/
-  rm -f "${pkgdir}${_qt5_prefix}/lib"/*.dll
+  rm -f "${pkgdir}${MINGW_PREFIX}/${_realname}/lib"/*.dll
 
   # Remove *.orig files
-  find "${pkgdir}${_qt5_prefix}" -type f -name "*.orig" -exec rm -f {} \;
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}" -type f -name "*.orig" -exec rm -f {} \;
 
   # Workaround for installing empty .pc files
   plain "---> Fix pkgconfig files..."
-  local _pc_files=( $(find ${srcdir}/${CARCH} -type f -name Qt5*.pc) )
-  cp -f ${_pc_files[@]} ${pkgdir}${_qt5_prefix}/lib/pkgconfig/
+  local _pc_files=( $(find ${srcdir}/${MSYSTEM} -type f -name Qt5*.pc) )
+  cp -f ${_pc_files[@]} ${pkgdir}${MINGW_PREFIX}/${_realname}/lib/pkgconfig/
 
   # Fix paths in qconfig.pri and qmodule.pri:
   #   $(cygpath -m ${MINGW_PREFIX}) -> $(cygpath -m ${pkgdir}${MINGW_PREFIX})
-  local QT_PREFIX_WIN=$(cygpath -m ${_qt5_prefix})
-  local PKGDIR_QT_PREFIX_WIN=$(cygpath -m ${pkgdir}${_qt5_prefix})
+  local QT_PREFIX_WIN=$(cygpath -m ${MINGW_PREFIX}/${_realname})
+  local PKGDIR_QT_PREFIX_WIN=$(cygpath -m ${pkgdir}${MINGW_PREFIX}/${_realname})
   local FAKE_PREFIX_FOR_REPLACE="@@QT_REAL_PREFIX/dir@@"
   local MINGW_PREFIX_WIN=$(cygpath -m ${MINGW_PREFIX})
 
-  find "${pkgdir}${_qt5_prefix}/share/qt5" -type f \( -name '*.pri' -o -name '*.prl' \) \
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/share/qt5" -type f \( -name '*.pri' -o -name '*.prl' \) \
       -exec sed -i -e "s|${QT_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/lib" -type f \( -name '*.pri' -o -name '*.prl' \) \
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/lib" -type f \( -name '*.pri' -o -name '*.prl' \) \
       -exec sed -i -e "s|${QT_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/lib" -type f -name '*.cmake' \
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/lib" -type f -name '*.cmake' \
       -exec sed -i -e "s|${QT_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/lib/pkgconfig" -type f -name '*.pc' \
-      -exec sed -i -e "s|${QT_PREFIX_WIN}|${_qt5_prefix}|g" {} \;
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/lib/pkgconfig" -type f -name '*.pc' \
+      -exec sed -i -e "s|${QT_PREFIX_WIN}|${MINGW_PREFIX}/${_realname}|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/lib/pkgconfig" -type f -name '*.pc' \
-      -exec sed -i -e "s|${PKGDIR_QT_PREFIX_WIN}|${_qt5_prefix}|g" {} \;
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/lib/pkgconfig" -type f -name '*.pc' \
+      -exec sed -i -e "s|${PKGDIR_QT_PREFIX_WIN}|${MINGW_PREFIX}/${_realname}|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/lib" -type f -name '*.cmake' \
-      -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}/..|g" {} \;
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/lib" -type f -name '*.cmake' \
+    -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}/..|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/share/qt5" -type f \( -name '*.pri' -o -name '*.prl' \) \
-      -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}/..|g" {} \;
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/share/qt5" -type f \( -name '*.pri' -o -name '*.prl' \) \
+    -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}/..|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/lib" -type f \( -name '*.pri' -o -name '*.prl' \) \
-      -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}/..|g" {} \;
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/lib" -type f \( -name '*.pri' -o -name '*.prl' \) \
+    -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${FAKE_PREFIX_FOR_REPLACE}/..|g" {} \;
 
-  find "${pkgdir}${_qt5_prefix}/lib/pkgconfig" -type f -name '*.pc' \
-      -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${MINGW_PREFIX}|g" {} \;
+  find "${pkgdir}${MINGW_PREFIX}/${_realname}/lib/pkgconfig" -type f -name '*.pc' \
+    -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${MINGW_PREFIX}|g" {} \;
 }
 
-sha256sums=('ebc77d27934b70b25b3dc34fbec7c4471eb451848e891c42b32409ea30fe309f'
+sha256sums=('776a9302c336671f9406a53bd30b8e36f825742b2ec44a57c08217bff0fa86b9'
             '884b32f0e2e1bb110330a921b69443379a7be98c42f13754f9c5f56c040ba3b7'
             '617e6fa85a92353d0073425d37cd5d90d92cb7f906d66dd2d0df576122d091a4'
             '27ce2161b5dbea2fcce6b15948ab722a71036d056420854f6554969f683583bb'
             'e04033364f5ad77906b4100c34572df57bd793a55bc33b7d8a753a2cc60af259'
             '18fd2fa42215ac47b3b314261ab98cbe65f8231429e4f29a152288a3ca93daf1'
             '4e154fbc9059a096c351d019da6b18c907b1d8b06e028f48c7365f62bcd0edc9'
-            '96e9c37383633461ace63c8d31f7dc3cb37ea387c435ec4222f58eaab138a69e'
+            'e2ec5e67bdcfd162a82c49181a2d480f4b193acdfa6b0e22f4a8448286162630'
             '465d3897c4494695b66ac121944b3bd370db91bfea71dd2c9170dbf268cc99ea'
             'b31929c78f9906756a5e1bdf9a796541865c474aaa1b3eefea1a3f1d7c8d94ca'
             'd8a476be7e55e8bb9362868073dc9e7937431e68b9578c0a0ed103cf1ebc8c01'
@@ -480,6 +405,4 @@ sha256sums=('ebc77d27934b70b25b3dc34fbec7c4471eb451848e891c42b32409ea30fe309f'
             '9ea7aeb486023f3aebf1af44603ebd9266009aaeaf91e52c37c8c5154ea3900c'
             '7e57ce20b6707bc3b4a727da3287cadda13a74317d86515358b2535bc15244c7'
             '052c7035ad9a4fc0321975ba7658fb755bbc0841c7e1d9e88bb0a15e6a90b770'
-            '157b97b3e3031d93d93e45368a1c54ebfbf9578116f75f5126e977e5dd518191'
-            '42db6bf224c9af94608c750e4f3e9aa147131681731f293eb34bf36abb2b8ab2'
-            'e8943934af0cea22814b526ca75abf98cacac2d0f86e2b2c9588c694a859f9d2')
+            '157b97b3e3031d93d93e45368a1c54ebfbf9578116f75f5126e977e5dd518191')
