--- a/qt-5.15/PKGBUILD
+++ b/qt-5.15/PKGBUILD
@@ -14,8 +14,8 @@ fi
 _realname=qt5-static-mem
 pkgbase="mingw-w64-${_realname}"
 pkgname="${MINGW_PACKAGE_PREFIX}-${_realname}"
-pkgver=5.15.9
-pkgrel=1
+pkgver=5.15.10
+pkgrel=2
 arch=('any')
 mingw_arch=('mingw64' 'clang64')
 pkgdesc="A cross-platform application and UI framework (mingw-w64-static-mem)"
@@ -24,6 +24,7 @@ license=('GPL3' 'LGPL' 'FDL' 'custom')
 depends=("${MINGW_PACKAGE_PREFIX}-cc"
          "${MINGW_PACKAGE_PREFIX}-gdb"
          "${MINGW_PACKAGE_PREFIX}-qtbinpatcher"
+         "${MINGW_PACKAGE_PREFIX}-make"
          "${MINGW_PACKAGE_PREFIX}-z3"
          "make")
 makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
@@ -52,6 +53,7 @@ source=(https://download.qt.io/official_releases/qt/${pkgver%.*}/${pkgver}/singl
         0000-adjust-qmake-conf-mingw.patch
         0001-qt-5.8.0-fix-sql-libraries-mingw.patch
         0002-qt-5.8.0-configure-gcc-before-clang.patch
+        0003-enable-avx-support.patch
         0004-fix-linking-again-different-static-libs.patch
         0006-qt-5.3.0-win_flex-replace.patch
         0007-qt-5.3.0-win32-g-Enable-static-builds.patch
@@ -109,6 +111,7 @@ prepare() {
     0000-adjust-qmake-conf-mingw.patch \
     0001-qt-5.8.0-fix-sql-libraries-mingw.patch \
     0002-qt-5.8.0-configure-gcc-before-clang.patch \
+    0003-enable-avx-support.patch \
     0004-fix-linking-again-different-static-libs.patch \
     0006-qt-5.3.0-win_flex-replace.patch \
     0007-qt-5.3.0-win32-g-Enable-static-builds.patch \
@@ -148,6 +151,10 @@ prepare() {
     0304-qtdeclarative-disable-dx12.patch \
     0310-fix-assimp-not-found.patch
 
+  if [[ ${MINGW_PACKAGE_PREFIX} == *-clang-* ]]; then
+    sed -i "s| -mthreads||g" qtbase/mkspecs/common/g++-win32.conf
+  fi
+
   local _ARCH_TUNE=
   case ${MINGW_CHOST} in
     i686*)
@@ -179,34 +186,8 @@ build() {
   mkdir -p ${_buildpkgdir}
   local QTDIR_WIN=$(cygpath -am ${_buildpkgdir})
 
-  local _freetype2_pkgconf=""
-  local _libxml2_pkgconf=""
-
-  _extra_incpaths+=("-I")
-  _extra_incpaths+=("${MINGW_PREFIX}/include/mariadb")
-
-  local -a _extra_libpaths=()
-  local -a _extra_libs=()
-
   cd ${MSYSTEM}
   touch qtbase/.gitignore
-
-  # Set other config stuff that's configure-script-type dependent.
-  local -a _extra_config
-
-  _extra_config+=("-no-glib")
-
-  # static can't use anything but -qt-sql-sqlite both for size
-  # reasons and because shared libraries get auto-detected and
-  # built as plugins.
-  local -a _sql_config
-  _sql_config+=("-no-sql-ibase")
-  _sql_config+=("-no-sql-mysql")
-  _sql_config+=("-no-sql-odbc")
-  _sql_config+=("-no-sql-psql")
-  _sql_config+=("-no-sql-sqlite2")
-  _sql_config+=("-sql-sqlite")
-  _sql_config+=("-qt-sqlite")
 
   export OPENSSL_LIBS="-lssl -lcrypto -lcrypt32 -lgdi32"
   # https://github.com/msys2/MSYS2-packages/issues/2282
@@ -220,6 +201,7 @@ build() {
   unset XQMAKESPEC
   unset QMAKEPATH
   unset QMAKEFEATURES
+  # export NINJA_PATH=${MINGW_PREFIX}/bin/ninja.exe
 
   local -a configure_opts
 
@@ -227,6 +209,7 @@ build() {
   export LLVM_INSTALL_DIR=${MINGW_PREFIX}
   #export VULKAN_SDK=${MINGW_PREFIX}
   export QDOC_USE_STATIC_LIBCLANG=1
+  #export FORCE_MINGW_QDOC_BUILD=1
   # Hack to disable building qdoc
   patch -p1 -i ${srcdir}/0302-ugly-hack-disable-qdoc-build.patch
   export QDOC_SKIP_BUILD=1
@@ -238,13 +221,16 @@ build() {
   configure_opts+=("-D" "JAS_DLL=0")
   configure_opts+=("-no-dbus")
   configure_opts+=("-openssl-linked")
+  configure_opts+=("-no-iconv")
   configure_opts+=("-no-fontconfig")
   configure_opts+=("-no-iconv")
   configure_opts+=("-no-gif")
   configure_opts+=("-no-tiff")
   configure_opts+=("-no-webp")
   configure_opts+=("-no-gbm")
+  configure_opts+=("-no-icu")
   configure_opts+=("-no-glib")
+
   configure_opts+=("-skip" "qtactiveqt")
   configure_opts+=("-skip" "qtcanvas3d")
   configure_opts+=("-skip" "qtcharts")
@@ -273,6 +259,7 @@ build() {
   configure_opts+=("-skip" "qtquickcontrols2")
   configure_opts+=("-skip" "qtscript")
   configure_opts+=("-skip" "qtmultimedia")
+  configure_opts+=("-skip" "qttools")
 
   configure_opts+=("-qt-freetype")
   configure_opts+=("-qt-harfbuzz")
@@ -280,10 +267,20 @@ build() {
   configure_opts+=("-qt-libpng")
   configure_opts+=("-qt-zlib")
   configure_opts+=("-qt-pcre")
-  configure_opts+=("-no-icu")
   configure_opts+=("-nomake" "examples")
   configure_opts+=("-nomake" "tests")
-  configure_opts+=("-skip" "qttools")
+
+  # static can't use anything but -qt-sql-sqlite both for size
+  # reasons and because shared libraries get auto-detected and
+  # built as plugins.
+  local -a _sql_config
+  _sql_config+=("-no-sql-ibase")
+  _sql_config+=("-no-sql-mysql")
+  _sql_config+=("-no-sql-odbc")
+  _sql_config+=("-no-sql-psql")
+  _sql_config+=("-no-sql-sqlite2")
+  _sql_config+=("-sql-sqlite")
+  _sql_config+=("-qt-sqlite")
 
   ./configure \
     -prefix ${QTDIR_WIN} \
@@ -294,15 +291,32 @@ build() {
     -confirm-license \
     -platform ${_platform} \
     -debug-and-release \
-    "${_extra_incpaths[@]}" \
-    "${_extra_libpaths[@]}" \
-    "${_extra_libs[@]}" \
-    -no-iconv \
     -feature-relocatable \
-    "${_extra_config[@]}" \
-    "${_sql_config[@]}" \
-    "${configure_opts[@]}"
+    "${configure_opts[@]}" \
+    "${_sql_config[@]}"
 
+  # I'm keeping this around while qt5-static cmake problems persist (hopefully not long!)
+  # qtbase/mkspecs/modules-inst/qt_lib_core.pri
+  # pushd src/x86_64
+  #   ROOT=$(pwd -W)
+  #   pushd qtbase/
+  #     ${ROOT}/qtbase/bin/qmake.exe ${ROOT}/qtbase/qtbase.pro -o Makefile
+  #   popd
+  #   cp -rf qtbase/src/corelib qtbase/src/corelib.pre-write-cmake
+  #   pushd qtbase/src/corelib
+  #     ${ROOT}/qtbase/bin/qmake.exe ${ROOT}/qtbase/src/corelib/corelib.pro -d -d -d -d -o Makefile > log.txt
+  #   popd
+  # popd
+  # .
+  # .. or .. (this alternative could be used when _minimal=yes)
+  # .
+  # pushd src/x86_64
+  #   make module-qtbase && make module-qtbase-install_subtargets
+  # popd
+  # .. do your testing.
+  # There is a race condition / dependency problem with libqtiff and dumpdoc.exe which
+  # can happen at -j9 so make twice (dumpdoc.exe depends on libqtiff but can get built
+  # first).
   make || make
 }
 
@@ -369,10 +383,11 @@ package() {
     -exec sed -i -e "s|${MINGW_PREFIX_WIN}|${MINGW_PREFIX}|g" {} \;
 }
 
-sha256sums=('26d5f36134db03abe4a6db794c7570d729c92a3fc1b0bf9b1c8f86d0573cd02f'
+sha256sums=('b545cb83c60934adc9a6bbd27e2af79e5013de77d46f5b9f5bb2a3c762bf55ca'
             '884b32f0e2e1bb110330a921b69443379a7be98c42f13754f9c5f56c040ba3b7'
             '617e6fa85a92353d0073425d37cd5d90d92cb7f906d66dd2d0df576122d091a4'
             '27ce2161b5dbea2fcce6b15948ab722a71036d056420854f6554969f683583bb'
+            '15c9fdf4d54628e64a9b7e456a5308aecf0f1c8e33a5aff0ab0bcac0300a9568'
             'e04033364f5ad77906b4100c34572df57bd793a55bc33b7d8a753a2cc60af259'
             '18fd2fa42215ac47b3b314261ab98cbe65f8231429e4f29a152288a3ca93daf1'
             '4e154fbc9059a096c351d019da6b18c907b1d8b06e028f48c7365f62bcd0edc9'
