--- a/qt-6.7/PKGBUILD
+++ b/qt-6.7/PKGBUILD
@@ -5,7 +5,7 @@
 _realname=qt6
 pkgbase=mingw-w64-${_realname}-static-mem
 pkgname=("${MINGW_PACKAGE_PREFIX}-${_realname}-static-mem")
-_qtver=6.7.2
+_qtver=6.7.3
 pkgver=${_qtver/-/}
 pkgrel=1
 pkgdesc="A cross-platform application and UI framework (mingw-w64-mem)"
@@ -57,7 +57,7 @@ makedepends=("${MINGW_PACKAGE_PREFIX}-cc"
              "rsync")
 _pkgfn="${_realname/6/}-everywhere-src-${_qtver}"
 _install_prefix=${MINGW_PREFIX}/qt6-static-mem
-source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/single/${_pkgfn}.tar.xz"
+source=("https://download.qt.io/archive/qt/${pkgver%.*}/${_qtver}/single/${_pkgfn}.tar.xz"
         001-adjust-qmake-conf-mingw.patch
         002-qt-6.2.0-win32-g-Add-QMAKE_EXTENSION_IMPORTLIB-defaulting-to-.patch
         003-qt-6.2.0-dont-add-resource-files-to-qmake-libs.patch
@@ -73,7 +73,7 @@ source=("https://download.qt.io/official_releases/qt/${pkgver%.*}/${_qtver}/sing
         013-disable-finding-webp-from-cmake-config-files.patch
         014-imageformats-transitive-dependencies.patch
         015-qt6-windeployqt-fixes.patch)
-sha256sums=('0aaea247db870193c260e8453ae692ca12abc1bd841faa1a6e6c99459968ca8a'
+sha256sums=('a3f1d257cbb14c6536585ffccf7c203ce7017418e1a0c2ed7c316c20c729c801'
             '26f3bcc3729520a5ba648a9ce92a9293c8fb1cf16d81af612587ce10d501dcb6'
             '817ce7a15eafb945da5f03706cd7196198c9a903c0372cb7023d1e27634355a4'
             'af3f4c6491942ee6a7681eecef2d999897e38fcef7a5edcf3774589f137dac73'
